--- a/app/src/styles/navbar.css
+++ b/app/src/styles/navbar.css
@@ -1,16 +1,17 @@
-nav {
-    display: flex;
-    justify-content: space-evenly;
-    font-size: 2em;
+body {
+    margin: 0;
+    padding: 0;
 }
 
-nav a.active {
-    background-color: #4c75af;
+a.active {
+    background-color: #26c3fc;
     color: white;
 }
 
-nav a {
+a {
     text-decoration: none;
-    color: black;
+    color: white;
     padding: 0.5em;
+    font-weight: 700;
+    font-size: 1.1em;
 }
